# biography_writer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
bwriter/: pipelines.py  processing.py  transcriber.py  utils.py
bwriter/prompts/: processor_prompts.json
utils/: logger.py
